--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SkeletonApp2023",
+  "name": "skeletonapp2023",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -8,8 +8,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
+    "test": "jasmine",
+    "lint": "ng lint",
+    "e2e": "protractor"
   },
   "private": true,
   "dependencies": {
@@ -21,13 +22,23 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@awesome-cordova-plugins/barcode-scanner": "^6.4.0",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
+    "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.2.3",
+    "@capacitor/camera": "^5.0.7",
+    "@capacitor/core": "^5.2.3",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "angular2-qrscanner": "^1.0.7",
+    "angularx-qrcode": "^16.0.2",
+    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
+    "ngx-scanner-qrcode": "^1.6.7",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -43,16 +54,18 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.2.3",
+    "@capacitor/cli": "^5.2.3",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
+    "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine": "^5.1.0",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -61,6 +74,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
