--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "jasmine",
     "lint": "ng lint",
-    "e2e": "protractor"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -55,12 +57,14 @@
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "^5.2.3",
+    "@cypress/schematic": "^2.5.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "cypress": "latest",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -74,7 +78,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "protractor": "^3.3.0",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
